| Summary: | ASTERISK-26446: app_dial: There's no way to override the hangupcause on unanswered channels | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2016-10-06 10:54:30 | Date Closed: | 2016-10-11 14:58:43 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_dial |
| Versions: | 13.11.2 14.0.2 GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When multiple channels are dialed and 1 answers, ANSWERED_ELSEWHERE is always sent to the unanswered channels. This doesn't work in all situations because some phones won't treat this as a missed call. Although you can call Hangup() in a hangup_handler and set the cause, Hangup doesn't return and causes the hangup handler to emit a NOTICE that the handler exited abnormally.
An option to Dial to set the cause on unanswered channels would be appropriate. Community discussion here: https://community.asterisk.org/t/how-to-make-a-device-consider-a-call-not-answered/68248 | ||
| Comments: | |||